@@ -47,7 +47,7 @@ import java.util.concurrent.TimeUnit;
 public class Main {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(Main.class);
-    public static final String JAVA_URL = "https://cdn.crate.io/downloads/openjdk/jre1.7.0_79.tar.gz";
+    public static final String JAVA_URL = "https://cdn.crate.io/downloads/openjdk/jre-7u80-linux.tar.gz";
 
     private static final Set<String> HELP_OPTIONS = Sets.newHashSet("-h", "--help", "help");
     private static final Set<String> PROTECTED_CRATE_ARGS = Sets.newHashSet(
